# mtuci-ais-practice

./: .dockerignore  .env.example  .gitignore  DOCKER_README.md  Dockerfile  README.md  database.py  database_schema.sql  docker-compose.db-only.yml  docker-compose.yml  main.py  pyproject.toml  report_generator.py
